# internal/interfaces/http/routes/routes.go
@@ -19,6 +19,7 @@ func SetupRoutes(router *gin.Engine, authHandler *handlers.AuthHandler, authMidd
 		{
 			auth.POST("/register", authHandler.Register)
 			auth.POST("/login", authHandler.Login)
+			auth.POST("/refresh", authHandler.RefreshToken)
 		}
 
 		//Protected routes
